...
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singlePlayerButton" />

        <ImageButton
            android:id="@+id/achievementButton"
            android:layout_width="0dp"
            android:layout_height="135dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/button"
...
