<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:text="email: "
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/signup_email_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></TextView>

    <EditText
        android:id="@+id/signup_email_edt"
        android:layout_width="141dp"
        android:layout_height="54dp"
        android:layout_marginEnd="104dp"
        android:hint="Enter Email Here"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/signup_username_edt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"></EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="81dp"
        android:text="Signup Example"
        android:textColor="#fc0303"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_username_edt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="username: "
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/signup_username_edt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_username_edt"></TextView>

    <EditText
        android:id="@+id/signup_username_edt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="221dp"
        android:layout_marginBottom="250dp"
        android:hint="Enter Username Here"
        app:layout_constraintBottom_toTopOf="@+id/signup_signup_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"></EditText>


    <TextView
        android:id="@+id/usernametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="9dp"
        android:text="password: "
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/signup_password_edt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_password_edt"></TextView>

    <EditText
        android:id="@+id/signup_password_edt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:hint="Enter Password Here"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signup_confirm_edt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usernametext"
        app:layout_constraintTop_toBottomOf="@+id/signup_username_edt"></EditText>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="21dp"
        android:text="confirm\npassword: "
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/signup_confirm_edt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_confirm_edt"></TextView>

    <EditText
        android:id="@+id/signup_confirm_edt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="101dp"
        android:hint="Enter Password Here"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signup_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_edt"></EditText>


    <Button
        android:id="@+id/signup_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="162dp"
        android:text="Login"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_signup_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_edt"></Button>

    <Button
        android:id="@+id/signup_signup_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="162dp"
        android:text="Signup"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signup_login_btn"
        app:layout_constraintTop_toBottomOf="@+id/signup_username_edt"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>