...
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/userInfoBox"
        app:layout_constraintTop_toTopOf="@+id/userInfoBox"></ImageView>

    <ImageButton
        android:id="@+id/editProfilePictureButton"
        android:layout_width="50dp"
...
